Cold War Stage Two

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -8,6 +8,7 @@
   ##########################
   # IDEAS
   ##########################
+
   PB_RUS_Mixed_Nation:0 "A Nation Divided"
   PB_RUS_Mixed_Nation_desc:0 "Russia for all it's history has remained a state united by luck. It's people have no loyalties to their overlords in Moscow and unless significant change occures then it shall stay that way or become something worse." 
   PB_RUS_Bitter_Revanchism:0 "Bitter Revanchism"
@@ -32,6 +33,7 @@
   PB_RUS_Die_For_Russia:0 "Die For Russia"
   PB_RUS_Encourage_War_Room_Debates:0 "Encourage War Room Debates"
   PB_RUS_Encourage_War_Room_Debates2:0 "Encourage War Room Debates"
+
   ##########################
   # TRAITS
   ##########################
@@ -39,6 +41,7 @@
   PB_Lost_Son:0 "The Lost Tsarevich"
   PB_lost_Son_desc:0 "Tsar Nicholas II has lost all hope and lust for life since The Tragic Death of the Tsarevich Alexei Romanov and The Ensuing Suicide of the Tsarina Alexendra. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies."
   POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!07/11/1891\n\nA devout christian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the Tsar dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany."
+  
   ##########################
   # DECISIONS
   ##########################
@@ -60,6 +63,7 @@
   RUS_it_only_worsens:0 "Weekly Health Update"
   RUS_Medicine:0 "Give Him Painkillers"  
   RUS_death:0 "Impending Doom"
+
   ##########################
   # EVENTS
   ##########################
@@ -162,6 +166,34 @@
   russia39title:0 "The Russian Armed Forces"
   russia39desc:0 ""
   russia39opta:0 "All For Russia!"
+  russia41title:0 "Infiltration Successful"
+  russia41desc:0 ""
+  russia41opta:0 "Now We Wait"
+  russia42title:0 "A Failed Attempt"
+  russia42desc:0 ""
+  russia42opta:0 "We Learn From Our Mistakes"
+  russia43title:0 "Striking A Deal"
+  russia43desc:0 ""
+  russia43opta:0 "Money Corrupts All"
+  russia44title:0 "A Flat Out No"
+  russia44desc:0 ""
+  russia44opta:0 "There Missing Out"
+  russia45title:0 "Mutual Agreements"
+  russia45desc:0 ""
+  russia45opta:0 "It Was Too Easy"
+  russia46title:0 "The Incorruptible"
+  russia46desc:0 ""
+  russia46opta:0 "They Will Say Yes Next Time"
+  russia47title:0 "Partisans Attack Local Infrastructure"
+  russia47desc:0 ""
+  russia47opta:0 "Traitors!"
+  russia48title:0 "Canister Leaks In Enemy Territory"
+  russia48desc:0 ""
+  russia48opta:0 "They Should Have Stored Them Properly"
+  russia49title:0 "Caught With Our Pants Down"
+  russia49desc:0 ""
+  russia49opta:0 "Damn Them To Hell!"
+
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -221,6 +253,8 @@
   russia35tooltip:0 "\nCome now child, look, what do you see? I see a future, one morphed by the blood, sweat, and tears of your fellow Russian."
   russia36tooltip:0 "\nOnly the disloyal should fear us."
   russia37tooltip:0 "\nTo ensure the stability and prosperity of our glorious realm we must rightly punish those that have done wrong."
+  russia38tooltip:0 "\nass"
+
   ##########################
   # FOCUS
   ##########################
@@ -583,12 +617,12 @@
   
   PB_RUS_Cold_War:0 "The Franco-Russian Cold War"
   PB_RUS_Cold_War_desc:0 "With Europe at a stand still and the barrels of Russian and French soliders staring down at each other one can only ask when armageddon will occur. Both sides want a little bit more land, men, and resources and if this cold-war isn't dealt with peacefully then mainland Europe knows very well what will occur. \n\nIt was always assured that France's and Russia's ambitions will clash the day their so called pact of revenge formed. Even the Germans knew this, exploiting weaknesses in their communications networks, baiting stubborn generals from both sides, and overall lack of coordination between the powers. Now the time has come to truely test this pact of friendship and revenge. Will they cooperate and conquer or will they hinder and fall? Only time can tell.\n\nFrench Influence Points: §Y[?FRA_INF]§! £decision_influence_small\n\nRussian Influence Points: §Y[?RUS_INF] £decision_influence_small"
-  Political_Tension_Very_Low:0 "The current §YPolitical Tension§! between France and Russia is: §GVery Low§!"        
   RUS_send_diplomats:0 "Send Diplomats"
-  Political_Tension_Low:0 "Low"    
-  Political_Tension_Meduim:0 "Meduim"      
-  Political_Tension_High:0 "High"    
-  Political_Tension_Very_High:0 "Very High" 
+  Political_Tension_Very_Low:0 "The current §YPolitical Tension§! between France and Russia is: §GVery Low§!"        
+  Political_Tension_Low:0 "The current §YPolitical Tension§! between France and Russia is: §GLow§!"    
+  Political_Tension_Medium:0 "The current §YPolitical Tension§! between France and Russia is: §YMedium§!"      
+  Political_Tension_High:0 "The current §YPolitical Tension§! between France and Russia is: §RHigh§!"    
+  Political_Tension_Very_High:0 "The current §YPolitical Tension§! between France and Russia is: §RVery High§!" 
   RUS_ease_border_tensions:0 "Ease Border Tensions" 
   RUS_transfer_workers:0 "Transfer German Workers"    
   RUS_joint_administration_forces:0 "Joint Administration Forces"
@@ -611,3 +645,23 @@
   RUS_FRA_Improve_Relations_minor:0 "Tensions between Russia and France will slightly lower"
   RUS_FRA_Improve_Relations_average:0 "Tensions between Russia and France will lower"
   RUS_FRA_Improve_Relations_major:0 "Tensions between Russia and France will greatly lower"
+  FRA_send_diplomats:0 "Send Diplomats"
+  FRA_ease_border_tensions:0 "Ease Border Tensions"
+  FRA_transfer_workers:0 "Transfer Workers"
+  FRA_joint_administration_forces:0 "Joint Administration Forces"
+  FRA_economic_subsidies:0 "Economic Subsidies"
+  FRA_military_knowledge_sharing:0 "Military Knowledge Sharing"
+  ENG_stage_a_border_incident:0 "Stage A Border Incident"
+  ENG_Raise_Tension:0 "If Successful Tensions will be raised between Russia and France"
+  ENG_Raise_Tension_1:0 "If Successful Tensions will be raised between Russia and France as well as granting one of them the Rogue General Debuff"
+  ENG_Raise_Tension_2:0 "If Successful Tensions will be raised between Russia and France but on a minor scale"
+  ENG_Raise_Tension_3:0 "Tensions will be raised between Russia and France but on a minor scale"
+  ENG_Raise_Tension_4:0 "If Successful Tensions will be raised between Russia and France on a major scale"
+  ENG_influence_military_personal:0 "Influence Military Personal"
+  ENG_contact_politicians:0 "Contact Politicians"
+  ENG_support_partisans:0 "Support German Partisans"
+  ENG_plant_fake_evidence:0 "Plant Fake Evidence"
+  ENG_stage_a_bio_weapons_incident:0 "Stage A Bio Weapons Incident"
+  Locked_Cold_War:0 "Will Be Locked Out Of Raising Tension For The Duration Of The Decision"
+  Tensions_Recently_Raised:0 "Tensions Have Been Recently Rasied"
+  
