More Russian Stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -33,7 +33,13 @@
   PB_RUS_Die_For_Russia:0 "Die For Russia"
   PB_RUS_Encourage_War_Room_Debates:0 "Encourage War Room Debates"
   PB_RUS_Encourage_War_Room_Debates2:0 "Encourage War Room Debates"
-
+  PB_RUS_Church_Estates:0 "Church Estates"
+  PB_RUS_Political_Gerrymandering:0 "Political Gerrymandering"
+  PB_RUS_Police_State2:0 "The Russian Police State"
+  PB_RUS_Air_Supremacy:0 "Air Supremacy Doctrine"
+  PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs:0 "Floating Airfields And Underwater Wolf Packs"
+  PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs2:0 "Floating Airfields And Underwater Wolf Packs"
+  PB_RUS_Okhrana_Divisions:0 "Frontline Okhrana Divisions"
   ##########################
   # TRAITS
   ##########################
@@ -63,7 +69,27 @@
   RUS_it_only_worsens:0 "Weekly Health Update"
   RUS_Medicine:0 "Give Him Painkillers"  
   RUS_death:0 "Impending Doom"
-
+  PB_RUS_Renewed_Imperialism:0 "Renewed Imperialism"
+  PB_RUS_Renewed_Imperialism_desc:0 "With the world already on edge from the recent Frankish resurgence it seems all previous codes of political conduct have been abandoned. The world orders, old and anew are beggining to establish themselves as Great Powers and we must play catch up if we are to remain on the world stage.  "
+  RUS_intervention_in_scandinavia:0 " [SWE.GetFlag] [FIN.GetFlag] [NOR.GetFlag] [DEN.GetFlag] Intervention In Scandinavia"
+  RUS_ambitions_for_manchuria:0 " [MAN.GetFlag] Ambitions For Manchuria"
+  RUS_dreams_of_the_arabian_sea:0 " [PER.GetFlag] [SIN.GetFlag] Dreams Of The Arabian Sea"
+  RUS_demand_the_strait:0 " [TUR.GetFlag] Demand The Strait"
+  RUS_the_bitch_war:0 " [BCL.GetFlag] The Bitch War"
+  RUS_the_land_carrier:0 " [HWI.GetFlag] The Land Carrier"
+  RUS_our_slice_of_africa:0 " [ETH.GetFlag] Our Slice Of Africa"
+  RUS_bessarabia_for_overlordship:0 " [ROM.GetFlag] Bessarabia For Overlordship"
+  RUS_seize_polish_lands:0 " [POL.GetFlag] Seize Polish Lands"
+  RUS_crush_the_balkan_reds:0 " [HUN.GetFlag] Crush The Balkan Reds"
+  RUS_incorporate_the_governate:0 " [BAL.GetFlag] Incorporate The Governate"
+  RUS_incorporate_the_viceroyalty:0 " [TRS.GetFlag] Incorporate The Viceroyalty"
+  RUS_collapse_the_qing:0 " [CHI.GetFlag] Collapse The Qing"
+  RUS_conquer_the_filipino_insurrectionists:0 " [PHI.GetFlag] Conquer The Filipino Insurrectionists"
+  RUS_non_aggresion_pact_with_the_japanese:0 " [JAP.GetFlag] Non-Aggression Pact With The Japanese"
+  RUS_fortify_the_cities:0 " Fortify The Cities"
+  RUS_russification_campaigns:0 "Russification Campaigns"
+  RUS_join_the_pact_revanchiste:0 " [FRA.GetFlag] Join The Pact Revanchiste"
+  RUS_support_bulgarian_claims:0 " [BUL.GetFlag] Support Bulgarian Claims"
   ##########################
   # EVENTS
   ##########################
@@ -193,7 +219,9 @@
   russia49title:0 "Caught With Our Pants Down"
   russia49desc:0 ""
   russia49opta:0 "Damn Them To Hell!"
-
+  russia50title:0 "Russia In The Pact Revanchiste "
+  russia50desc:0 ""
+  russia50opta:0 "Welcome Our Brothers With Open Arms"
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -253,8 +281,8 @@
   russia35tooltip:0 "\nCome now child, look, what do you see? I see a future, one morphed by the blood, sweat, and tears of your fellow Russian."
   russia36tooltip:0 "\nOnly the disloyal should fear us."
   russia37tooltip:0 "\nTo ensure the stability and prosperity of our glorious realm we must rightly punish those that have done wrong."
-  russia38tooltip:0 "\nass"
-
+  russia38tooltip:0 "\nA promise of absolute loyalty from its citizens is all the state asks for."
+  russia39tooltip:0 "The §YRenewed Imperialism§! £decision_icon_small Decisions Will Become Available"
   ##########################
   # FOCUS
   ##########################
@@ -475,6 +503,7 @@
   RUS_focus_on_radar:0 "Focus On Radar"
   RUS_the_university_of_moscow:0 "The University Of Moscow"
   RUS_realize_slavia:0 "Realize Slavia"
+  RUS_a_permanent_state_of_paranoia:0 "A Permanent State Of Paranoia"
 
   ##########################
   # Party Loyalty Mechanic n shit
