Russian stuff part 999999

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -40,6 +40,15 @@
   PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs:0 "Floating Airfields And Underwater Wolf Packs"
   PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs2:0 "Floating Airfields And Underwater Wolf Packs"
   PB_RUS_Okhrana_Divisions:0 "Frontline Okhrana Divisions"
+  PB_RUS_Make_The_Gears_Turn:0 "Make The Gears Turn"
+  PB_RUS_Nationalising_Industry:0 "Nationalising Industry"
+  PB_RUS_Open_Contracts:0 "Open Contracts"
+  PB_RUS_All_In:0 "All In"
+  PB_RUS_Sharpen_Bayonets:0 "Sharpen Bayonets"  
+  PB_RUS_Sharpen_Bayonets2:0 "Sharpen Bayonets"
+  PB_RUS_Eat_The_Earth_Doctrine:0 "Eat The Earth Doctrine"
+  PB_RUS_Floating_Behemoths_And_Loyal_Dogs:0 "Floating Behemoths And Loyal Dogs"
+  PB_RUS_Floating_Behemoths_And_Loyal_Dogs2:0 "Floating Behemoths And Loyal Dogs"
   ##########################
   # TRAITS
   ##########################
@@ -222,6 +231,47 @@
   russia50title:0 "Russia In The Pact Revanchiste "
   russia50desc:0 ""
   russia50opta:0 "Welcome Our Brothers With Open Arms"
+  russia51title:0 "Russo-Italian Artillery Concordat"
+  russia51desc:0 ""
+  russia51opta:0 "Whatever Benefits Our Allies"
+  russia51optb:0 "Tell These Dumb Dogs No"
+  russia52title:0 "Italy Agrees"
+  russia52desc:0 ""
+  russia52opta:0 "Wonderful"
+  russia53title:0 "Italy Refuses"
+  russia53desc:0 ""
+  russia53opta:0 "What!"   
+  russia54title:0 "The Bosphorus Strait"
+  russia54desc:0 ""
+  russia54opta:0 "Demand Access Through The Straits"
+  russia54optb:0 "Send An Ultimatuim For The Transfer Of Istanbul"
+  russia55title:0 "Russia Demands Control Of Istanbul"
+  russia55desc:0 ""
+  russia55opta:0 "Give In To Their Demands"
+  russia55optb:0 "Call Their Bluff"
+  russia56title:0 "The Ottomans Refuse To Relenquish Istanbul"
+  russia56desc:0 ""
+  russia56opta:0 "Bastards"
+  russia56optb:0 "They Will Regret That"
+  russia57title:0 "The Ottomans Cede To Our Will"
+  russia57desc:0 ""
+  russia57opta:0 "They Fear Us As They Should"
+  russia58title:0 "Russia Demands Sea Access Through The Straits"
+  russia58desc:0 ""
+  russia58opta:0 "Give in To Their Demands"
+  russia58optb:0 "Tell Them No"
+  russia59title:0 "The Ottomans Kneel"
+  russia59desc:0 ""
+  russia59opta:0 "As They Should"
+  russia60title:0 "The Ottomans Refuse"
+  russia60desc:0 ""
+  russia60opta:0 "How Dare They"
+  russia61title:0 "Tensions In The Black Sea"
+  russia61desc:0 ""
+  russia61opta:0 "I Wonder Whats Going To Happen"
+  russia62title:0 "Russia Joins The Pact Revanchiste"
+  russia62desc:0 ""
+  russia62opta:0 "This Is Just The Beginning"
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -365,7 +415,7 @@
   RUS_beasts_of_the_night:0 "Nationalize Industry"
   RUS_russian_stoicism:0 "Russian Stoicism"
   RUS_kingdom_come:0 "Kingdom Come"
-  RUS_please_the_elites:0 "Please The Elites"
+  RUS_please_the_elites:0 "Open Contracts"
   RUS_convince_the_unconscionable:0 "Convince The Unconscionable"
   RUS_integrity_through_force:0 "Integrity Through Force"
   RUS_ignite_the_flames:0 "Ignite The Flames"
