github why you do this

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -279,6 +279,15 @@
   russia62desc:0 ""
   russia62opta:0 "We Must Bend The Knee"
   russia62optb:0 "Not In A Million Years"
+  russia63title:0 "Defeated And Outnumbered"
+  russia63desc:0 ""
+  russia63opta:0 "We Tried"
+  russia64title:0 "Russia Surrenders"
+  russia64desc:0 ""
+  russia64opta:0 "We Are Triumphant"
+  russia65title:0 "Armistice At Moscow"
+  russia65desc:0 ""
+  russia65opta:0 "What Will Happen Now?"
   ##########################
   # TOOLTIPS n Shit
   ##########################
