just some tags for the end of russia
Cause I have the worst GFX skills known to man anyone that can do portraits and flags are welcome to do so.

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -228,6 +228,10 @@
   PBNews.57.d:0 ""
   PBNews.57.a:0 "Death To The Tyrants!"
 
+  PBNews.58.t:0 "A Situation Made Worse"
+  PBNews.58.d:0 ""
+  PBNews.58.a:0 "They Deserve It"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
