--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -60,6 +60,7 @@
   ##########################
   # DECISIONS
   ##########################
+  RUS_the_army_step_in:0 "The Army Step In"
   RUS_Political_Promises_Ref:0 "Political Ventures"
   RUS_Economic_Subsidies:0 "Economic Subsidies"
   RUS_Contact_Democratic_Sympathizers:0 "Contact Democratic Sympathizers"
@@ -189,8 +190,8 @@
   russia28title:0 "The Collapse Of Russia"
   russia28desc:0 "There were visible signs of distress all throughout the room. Sweat breached through the forehead of every man who, by some unfortunate play of events, found themselves waiting in a confined makeshift conference room that was constructed by an ugly combination of peasantry furniture and party memorabilia. A petty officer gathered the courage and balls to speak on everyone's behalf, regurgitating the exact same thoughts his fellow officers inhabitated. "[Root.GetLeader]? We stopped receiving communications past Perm. I believe the end is near." The sound of throat movement echoed inside the officer's mouth and the proccess of swallowing saliva played its short and violent course."
   russia28opta:0 "What The Fuck!"
-  russia35title:0 "It Only Worsens"
-  russia35desc:0 ""What does the medical report read?" Questioned Alex hoping to hear something other than the truth. "Increased sensitivity to light, developing headaches, severe muscle pains, nothing good." Both of them knew what the outcome would be in time though they refused to believe it. It certainly couldn't be caused by natural means. A king becoming the victim of a crime that only inhabited the lower class is rare, what was more confusing was the delays for the needed medication the Tsar so desperately needed. Then it clicked."
+  russia35title:0 "The End Of An Era"
+  russia35desc:0 ""
   russia35opta:0 "It Is Time For A Switch Up"
   russia35optb:0 "The Army Know Best"
   russia36title:0 "Franco Russian Landship Concordat"
@@ -206,6 +207,9 @@
   russia39title:0 "The Russian Armed Forces"
   russia39desc:0 ""
   russia39opta:0 "All For Russia!"
+  russia40title:0 "A Full Recovery"
+  russia40desc:0 ""
+  russia40opta:0 "Not For Russia Though"
   russia41title:0 "Infiltration Successful"
   russia41desc:0 ""
   russia41opta:0 "Now We Wait"
@@ -288,9 +292,27 @@
   russia65title:0 "Armistice At Moscow"
   russia65desc:0 ""
   russia65opta:0 "What Will Happen Now?"
+  russia66title:0 "The Okhrana Seize Power"
+  russia66desc:0 ""
+  russia66opta:0 "Our Bloodiest Days Are Ahead Of Us"
+  russia67title:0 "An Ending At Midnight"
+  russia67desc:0 ""
+  russia67opta:0 "Lord Have Mercy"
+  russia68title:0 "Bulgaria Requests Our Support"
+  russia68desc:0 ""
+  russia68opta:0 "Help They Shall Recieve"
+  russia69title:0 "The Corpse Of A Giant"
+  russia69desc:0 ""
+  russia69opta:0 "Set Up Occupation Zones In The North And South"
+  russia69optb:0 "Set The Occupation Zones But Permanently Occupy The Major Cities"
+  russia69optc:0 "Balkanize The Giant"
+  russia70title:0 "A Total Shit Show"
+  russia70desc:0 ""
+  russia70opta:0 "What Now"
   ##########################
   # TOOLTIPS n Shit
   ##########################
+  RUS_LON:0 "British Occupation Authority Of Northern Russia"
   RET_AFRICA:0 "Russian East Africa"
   GBW_Exists:0 "The Great Balkan War is occuring"
   Tsar_Die:0 "The Tsar Dies"
@@ -352,6 +374,9 @@
   russia38tooltip:0 "\nA promise of absolute loyalty from its citizens is all the state asks for."
   russia39tooltip:0 "The §YRenewed Imperialism§! £decision_icon_small Decisions Will Become Available"
   RUS_Military_Government:0 "Russian Emergency Military Government"
+  russia40tooltip:0 "You will recieve 1 off-map §Ycivilian factory§! for every §YDominion§! who has an opinion of §YRussia§! that is greater than §G80§!. This also applies to §YPrussia§!, §YFrance§!, and §YItaly§!."
+  russia41tooltip:0 "\nThe time has come to rid Russia of her historical stains. While kings and queens may have proved useful around times of horse and cart todays era is different. Todays Russian wants safety and order and that they shall have, no matter the cost."
+  russia42tooltip:0 "Down with the old, up with the new! "
   ##########################
   # FOCUS
   ##########################
@@ -571,7 +596,7 @@
   RUS_focus_on_electricity:0 "Focus On Electricity"
   RUS_focus_on_radar:0 "Focus On Radar"
   RUS_the_university_of_moscow:0 "The University Of Moscow"
-  RUS_realize_slavia:0 "Realize Slavia"
+  RUS_realize_slavia:0 "A One Party State"
   RUS_a_permanent_state_of_paranoia:0 "A Permanent State Of Paranoia"
 
   ##########################
