--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -6919,6 +6919,107 @@ SAN_jc:0 "Sanghli State"
  WHR_cn_ADJ:0 "Russian"
  WHR_an_ADJ:0 "Russian"
 
+ SRU_ni:0 "British Mandate Of Tsaritsyn"
+ SRU_ni_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_ds:0 "British Mandate Of Tsaritsyn"
+ SRU_ds_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_rc:0 "British Mandate Of Tsaritsyn"
+ SRU_rc_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_an:0 "British Mandate Of Tsaritsyn"
+ SRU_an_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_cn:0 "British Mandate Of Tsaritsyn"
+ SRU_cn_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_lb:0 "British Mandate Of Tsaritsyn"
+ SRU_lb_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_ss:0 "British Mandate Of Tsaritsyn"
+ SRU_ss_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_jc:0 "British Mandate Of Tsaritsyn"
+ SRU_jc_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_ni_ADJ:0 "Russian"
+ SRU_rc_ADJ:0 "Russian"
+ SRU_lb_ADJ:0 "Russian"
+ SRU_ss_ADJ:0 "Russian"
+ SRU_jc_ADJ:0 "Russian"
+ SRU_ds_ADJ:0 "Russian"
+ SRU_cn_ADJ:0 "Russian"
+ SRU_an_ADJ:0 "Russian"
+  
+ MOS_ni:0 "British Mandate Of Moscow"
+ MOS_ni_DEF:0 "British Mandate Of Moscow"
+ MOS_ds:0 "British Mandate Of Moscow"
+ MOS_ds_DEF:0 "British Mandate Of Moscow"
+ MOS_rc:0 "British Mandate Of Moscow"
+ MOS_rc_DEF:0 "British Mandate Of Moscow"
+ MOS_an:0 "British Mandate Of Moscow"
+ MOS_an_DEF:0 "British Mandate Of Moscow"
+ MOS_cn:0 "British Mandate Of Moscow"
+ MOS_cn_DEF:0 "British Mandate Of Moscow"
+ MOS_lb:0 "British Mandate Of Moscow"
+ MOS_lb_DEF:0 "British Mandate Of Moscow"
+ MOS_ss:0 "British Mandate Of Moscow"
+ MOS_ss_DEF:0 "British Mandate Of Moscow"
+ MOS_jc:0 "British Mandate Of Moscow"
+ MOS_jc_DEF:0 "British Mandate Of Moscow"
+ MOS_ni_ADJ:0 "Russian"
+ MOS_rc_ADJ:0 "Russian"
+ MOS_lb_ADJ:0 "Russian"
+ MOS_ss_ADJ:0 "Russian"
+ MOS_jc_ADJ:0 "Russian"
+ MOS_ds_ADJ:0 "Russian"
+ MOS_cn_ADJ:0 "Russian"
+ MOS_an_ADJ:0 "Russian"
+
+ PET_ni:0 "German Mandate Of Petrograd"
+ PET_ni_DEF:0 "German Mandate Of Petrograd"
+ PET_ds:0 "German Mandate Of Petrograd"
+ PET_ds_DEF:0 "German Mandate Of Petrograd"
+ PET_rc:0 "German Mandate Of Petrograd"
+ PET_rc_DEF:0 "German Mandate Of Petrograd"
+ PET_an:0 "German Mandate Of Petrograd"
+ PET_an_DEF:0 "German Mandate Of Petrograd"
+ PET_cn:0 "German Mandate Of Petrograd"
+ PET_cn_DEF:0 "German Mandate Of Petrograd"
+ PET_lb:0 "German Mandate Of Petrograd"
+ PET_lb_DEF:0 "German Mandate Of Petrograd"
+ PET_ss:0 "German Mandate Of Petrograd"
+ PET_ss_DEF:0 "German Mandate Of Petrograd"
+ PET_jc:0 "German Mandate Of Petrograd"
+ PET_jc_DEF:0 "German Mandate Of Petrograd"
+ PET_ni_ADJ:0 "Russian"
+ PET_rc_ADJ:0 "Russian"
+ PET_lb_ADJ:0 "Russian"
+ PET_ss_ADJ:0 "Russian"
+ PET_jc_ADJ:0 "Russian"
+ PET_ds_ADJ:0 "Russian"
+ PET_cn_ADJ:0 "Russian"
+ PET_an_ADJ:0 "Russian"
+
+ DRU_ni:0 "Russian Democratic Revolt"
+ DRU_ni_DEF:0 "Russian Democratic Revolt"
+ DRU_ds:0 "Russian Democratic Revolt"
+ DRU_ds_DEF:0 "Russian Democratic Revolt"
+ DRU_rc:0 "Russian Democratic Revolt"
+ DRU_rc_DEF:0 "Russian Democratic Revolt"
+ DRU_an:0 "Russian Democratic Revolt"
+ DRU_an_DEF:0 "Russian Democratic Revolt"
+ DRU_cn:0 "Russian Democratic Revolt"
+ DRU_cn_DEF:0 "Russian Democratic Revolt"
+ DRU_lb:0 "Russian Democratic Revolt"
+ DRU_lb_DEF:0 "Russian Democratic Revolt"
+ DRU_ss:0 "Russian Democratic Revolt"
+ DRU_ss_DEF:0 "Russian Democratic Revolt"
+ DRU_jc:0 "Russian Democratic Revolt"
+ DRU_jc_DEF:0 "Russian Democratic Revolt"
+ DRU_ni_ADJ:0 "Russian"
+ DRU_rc_ADJ:0 "Russian"
+ DRU_lb_ADJ:0 "Russian"
+ DRU_ss_ADJ:0 "Russian"
+ DRU_jc_ADJ:0 "Russian"
+ DRU_ds_ADJ:0 "Russian"
+ DRU_cn_ADJ:0 "Russian"
+ DRU_an_ADJ:0 "Russian"
+
+
 ###################################
 # TEMPLATE
 ###################################
