--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7019,6 +7019,105 @@ SAN_jc:0 "Sanghli State"
  DRU_cn_ADJ:0 "Russian"
  DRU_an_ADJ:0 "Russian"
 
+ DON_ni:0 "Don Republic"
+ DON_ni_DEF:0 "Don Republic"
+ DON_ds:0 "Don Republic"
+ DON_ds_DEF:0 "Don Republic"
+ DON_rc:0 "Don Republic"
+ DON_rc_DEF:0 "Don Republic"
+ DON_an:0 "Don Republic"
+ DON_an_DEF:0 "Don Republic"
+ DON_cn:0 "Don Republic"
+ DON_cn_DEF:0 "Don Republic"
+ DON_lb:0 "Don Republic"
+ DON_lb_DEF:0 "Don Republic"
+ DON_ss:0 "Don Republic"
+ DON_ss_DEF:0 "Don Republic"
+ DON_jc:0 "Don Republic"
+ DON_jc_DEF:0 "Don Republic"
+ DON_ni_ADJ:0 "Russian"
+ DON_rc_ADJ:0 "Russian"
+ DON_lb_ADJ:0 "Russian"
+ DON_ss_ADJ:0 "Russian"
+ DON_jc_ADJ:0 "Russian"
+ DON_ds_ADJ:0 "Russian"
+ DON_cn_ADJ:0 "Russian"
+ DON_an_ADJ:0 "Russian"
+
+ VGE_ni:0 "Wolgastaat"
+ VGE_ni_DEF:0 "Wolgastaat"
+ VGE_ds:0 "Wolgastaat"
+ VGE_ds_DEF:0 "Wolgastaat"
+ VGE_rc:0 "Wolgastaat"
+ VGE_rc_DEF:0 "Wolgastaat"
+ VGE_an:0 "Wolgastaat"
+ VGE_an_DEF:0 "VWolgastaat"
+ VGE_cn:0 "Wolgastaat"
+ VGE_cn_DEF:0 "Wolgastaat"
+ VGE_lb:0 "Wolgastaat"
+ VGE_lb_DEF:0 "Wolgastaat"
+ VGE_ss:0 "Wolgastaat"
+ VGE_ss_DEF:0 "Wolgastaat"
+ VGE_jc:0 "Wolgastaat"
+ VGE_jc_DEF:0 "Wolgastaat"
+ VGE_ni_ADJ:0 "Volga German"
+ VGE_rc_ADJ:0 "Volga German"
+ VGE_lb_ADJ:0 "Volga German"
+ VGE_ss_ADJ:0 "Volga German"
+ VGE_jc_ADJ:0 "Volga German"
+ VGE_ds_ADJ:0 "Volga German"
+ VGE_cn_ADJ:0 "Volga German"
+ VGE_an_ADJ:0 "Volga German"
+
+ IUR_ni:0 "Idel-Ural"
+ IUR_ni_DEF:0 "Idel-Ural"
+ IUR_ds:0 "Idel-Ural"
+ IUR_ds_DEF:0 "Idel-Ural"
+ IUR_rc:0 "Idel-Ural"
+ IUR_rc_DEF:0 "Idel-Ural"
+ IUR_an:0 "Idel-Ural"
+ IUR_an_DEF:0 "Idel-Ural"
+ IUR_cn:0 "Idel-Ural"
+ IUR_cn_DEF:0 "Idel-Ural"
+ IUR_lb:0 "Idel-Ural"
+ IUR_lb_DEF:0 "Idel-Ural"
+ IUR_ss:0 "Idel-Ural"
+ IUR_ss_DEF:0 "Idel-Ural"
+ IUR_jc:0 "Idel-Ural"
+ IUR_jc_DEF:0 "Russian"
+ IUR_ni_ADJ:0 "Russian"
+ IUR_rc_ADJ:0 "Russian"
+ IUR_lb_ADJ:0 "Russian"
+ IUR_ss_ADJ:0 "Russian"
+ IUR_jc_ADJ:0 "Russian"
+ IUR_ds_ADJ:0 "Russian"
+ IUR_cn_ADJ:0 "Russian"
+ IUR_an_ADJ:0 "Russian" 
+
+ MRP_ni:0 "Mountain Republic"
+ MRP_ni_DEF:0 "Mountain Republic"
+ MRP_ds:0 "Mountain Republic"
+ MRP_ds_DEF:0 "Mountain Republic"
+ MRP_rc:0 "Mountain Republic"
+ MRP_rc_DEF:0 "Mountain Republic"
+ MRP_an:0 "Mountain Republic"
+ MRP_an_DEF:0 "Mountain Republic"
+ MRP_cn:0 "Mountain Republic"
+ MRP_cn_DEF:0 "Mountain Republic"
+ MRP_lb:0 "Mountain Republic"
+ MRP_lb_DEF:0 "Mountain Republic"
+ MRP_ss:0 "Mountain Republic"
+ MRP_ss_DEF:0 "Mountain Republic"
+ MRP_jc:0 "Mountain Republic"
+ MRP_jc_DEF:0 "Russian"
+ MRP_ni_ADJ:0 "Russian"
+ MRP_rc_ADJ:0 "Russian"
+ MRP_lb_ADJ:0 "Russian"
+ MRP_ss_ADJ:0 "Russian"
+ MRP_jc_ADJ:0 "Russian"
+ MRP_ds_ADJ:0 "Russian"
+ MRP_cn_ADJ:0 "Russian"
+ MRP_an_ADJ:0 "Russian"
 
 ###################################
 # TEMPLATE
