Puppet Decisions Work
Puppet Decisions established for Eastern Europe and most of Balkans

--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7119,6 +7119,56 @@ SAN_jc:0 "Sanghli State"
  MRP_cn_ADJ:0 "Russian"
  MRP_an_ADJ:0 "Russian"
 
+ TRY_ni:0 "Transylvania"
+ TRY_ni_DEF:0 "Transylvania"
+ TRY_ds:0 "Transylvania"
+ TRY_ds_DEF:0 "Transylvania"
+ TRY_rc:0 "Transylvania"
+ TRY_rc_DEF:0 "Transylvania"
+ TRY_an:0 "Transylvania"
+ TRY_an_DEF:0 "Transylvania"
+ TRY_cn:0 "Transylvania"
+ TRY_cn_DEF:0 "Transylvania"
+ TRY_lb:0 "Transylvania"
+ TRY_lb_DEF:0 "Transylvania"
+ TRY_ss:0 "Transylvania"
+ TRY_ss_DEF:0 "Transylvania"
+ TRY_jc:0 "Transylvania"
+ TRY_jc_DEF:0 "Transylvania"
+ TRY_ni_ADJ:0 "Transylvanian"
+ TRY_rc_ADJ:0 "Transylvanian"
+ TRY_lb_ADJ:0 "Transylvanian"
+ TRY_ss_ADJ:0 "Transylvanian"
+ TRY_jc_ADJ:0 "Transylvanian"
+ TRY_ds_ADJ:0 "Transylvanian"
+ TRY_cn_ADJ:0 "Transylvanian"
+ TRY_an_ADJ:0 "Transylvanian"
+
+ BNA_ni:0 "Banat"
+ BNA_ni_DEF:0 "Banat"
+ BNA_ds:0 "Banat"
+ BNA_ds_DEF:0 "Banat"
+ BNA_rc:0 "Banat"
+ BNA_rc_DEF:0 "Banat"
+ BNA_an:0 "Banat"
+ BNA_an_DEF:0 "Banat"
+ BNA_cn:0 "Banat"
+ BNA_cn_DEF:0 "Banat"
+ BNA_lb:0 "Banat"
+ BNA_lb_DEF:0 "Banat"
+ BNA_ss:0 "Banat"
+ BNA_ss_DEF:0 "Banat"
+ BNA_jc:0 "Banat"
+ BNA_jc_DEF:0 "Banat"
+ BNA_ni_ADJ:0 "Banatian"
+ BNA_rc_ADJ:0 "Banatian"
+ BNA_lb_ADJ:0 "Banatian"
+ BNA_ss_ADJ:0 "Banatian"
+ BNA_jc_ADJ:0 "Banatian"
+ BNA_ds_ADJ:0 "Banatian"
+ BNA_cn_ADJ:0 "Banatian"
+ BNA_an_ADJ:0 "Banatian"
+
 ###################################
 # TEMPLATE
 ###################################
