--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7119,6 +7119,31 @@ SAN_jc:0 "Sanghli State"
  MRP_cn_ADJ:0 "Russian"
  MRP_an_ADJ:0 "Russian"
 
+ KAM_ni:0 "Kalmykia"
+ KAM_ni_DEF:0 "Kalmykia"
+ KAM_ds:0 "Kalmykia"
+ KAM_ds_DEF:0 "Kalmykia"
+ KAM_rc:0 "Kalmykia"
+ KAM_rc_DEF:0 "Kalmykia"
+ KAM_an:0 "Kalmykia"
+ KAM_an_DEF:0 "Kalmykia"
+ KAM_cn:0 "Kalmykia"
+ KAM_cn_DEF:0 "Kalmykia"
+ KAM_lb:0 "Kalmykia"
+ KAM_lb_DEF:0 "Kalmykia"
+ KAM_ss:0 "Kalmykia"
+ KAM_ss_DEF:0 "Kalmykia"
+ KAM_jc:0 "Kalmykia"
+ KAM_jc_DEF:0 "Kalmykian"
+ KAM_ni_ADJ:0 "Kalmykian"
+ KAM_rc_ADJ:0 "Kalmykian"
+ KAM_lb_ADJ:0 "Kalmykian"
+ KAM_ss_ADJ:0 "Kalmykian"
+ KAM_jc_ADJ:0 "Kalmykian"
+ KAM_ds_ADJ:0 "Kalmykian"
+ KAM_cn_ADJ:0 "Kalmykian"
+ KAM_an_ADJ:0 "Kalmykian"
+
 ###################################
 # TEMPLATE
 ###################################
