--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7194,6 +7194,31 @@ SAN_jc:0 "Sanghli State"
  BNA_cn_ADJ:0 "Banatian"
  BNA_an_ADJ:0 "Banatian"
 
+ DAG_ni:0 "Dagestan"
+ DAG_ni_DEF:0 "Dagestan"
+ DAG_ds:0 "Dagestan"
+ DAG_ds_DEF:0 "Dagestan"
+ DAG_rc:0 "Dagestan"
+ DAG_rc_DEF:0 "Dagestan"
+ DAG_an:0 "Dagestan"
+ DAG_an_DEF:0 "Dagestan"
+ DAG_cn:0 "Dagestan"
+ DAG_cn_DEF:0 "Dagestan"
+ DAG_lb:0 "Dagestan"
+ DAG_lb_DEF:0 "Dagestan"
+ DAG_ss:0 "Dagestan"
+ DAG_ss_DEF:0 "Dagestan"
+ DAG_jc:0 "Dagestan"
+ DAG_jc_DEF:0 "Dagestan"
+ DAG_ni_ADJ:0 "Russian"
+ DAG_rc_ADJ:0 "Russian"
+ DAG_lb_ADJ:0 "Russian"
+ DAG_ss_ADJ:0 "Russian"
+ DAG_jc_ADJ:0 "Russian"
+ DAG_ds_ADJ:0 "Russian"
+ DAG_cn_ADJ:0 "Russian"
+ DAG_an_ADJ:0 "Russian"
+
 ###################################
 # TEMPLATE
 ###################################
