Reworked Russia's Political Tree

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -49,18 +49,19 @@
   PB_RUS_Eat_The_Earth_Doctrine:0 "Eat The Earth Doctrine"
   PB_RUS_Floating_Behemoths_And_Loyal_Dogs:0 "Floating Behemoths And Loyal Dogs"
   PB_RUS_Floating_Behemoths_And_Loyal_Dogs2:0 "Floating Behemoths And Loyal Dogs"
+  PB_RUS_The_Army_Knows_Best:0 "The Army Knows Best"
   ##########################
   # TRAITS
   ##########################
 
   PB_Lost_Son:0 "The Lost Tsarevich"
-  PB_lost_Son_desc:0 "Tsar Nicholas II has lost all hope and lust for life since The Tragic Death of the Tsarevich Alexei Romanov and The Ensuing Suicide of the Tsarina Alexendra. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies."
+  POLITICS_Nicholas_II_DESC:0 "Tsar Nicholas II has lost all hope and lust for life since The Tragic Death of the Tsarevich Alexei Romanov and The Ensuing Suicide of the Tsarina Alexendra. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies."
   POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!07/11/1891\n\nA devout christian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the Tsar dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany."
   
   ##########################
   # DECISIONS
   ##########################
-  RUS_the_army_step_in:0 "The Army Step In"
+  RUS_the_army_step_in:0 "Send In The Army"
   RUS_Political_Promises_Ref:0 "Political Ventures"
   RUS_Economic_Subsidies:0 "Economic Subsidies"
   RUS_Contact_Democratic_Sympathizers:0 "Contact Democratic Sympathizers"
@@ -367,7 +368,7 @@
   RUS_WW2:0 "Europe Is Alight"
   russia32tooltip:0 "§RWe Will Begin An Age Of Expansion§!"
   russia33tooltip:0 "Tell the doctors to hurry up!"
-  russia34tooltip:0 "\nIn this new world weakness is put first. Long have gone the days of old where only the strongest survived, the smartest adapted, and the inferior fell. Though there is still a chance to revert this poised creation. Though the means of doing so will be considered, inhuman."
+  russia34tooltip:0 "______________________________________________ In this new world weakness is put first. Long have gone the days of old where only the strongest survived, the smartest adapted, and the inferior fell. Though there is still a chance to revert this poised creation. Though the means of doing so will be considered, inhuman."
   russia35tooltip:0 "\nCome now child, look, what do you see? I see a future, one morphed by the blood, sweat, and tears of your fellow Russian."
   russia36tooltip:0 "\nOnly the disloyal should fear us."
   russia37tooltip:0 "\nTo ensure the stability and prosperity of our glorious realm we must rightly punish those that have done wrong."
@@ -376,7 +377,8 @@
   RUS_Military_Government:0 "Russian Emergency Military Government"
   russia40tooltip:0 "You will recieve 1 off-map §Ycivilian factory§! for every §YDominion§! who has an opinion of §YRussia§! that is greater than §G80§!. This also applies to §YPrussia§!, §YFrance§!, and §YItaly§!."
   russia41tooltip:0 "\nThe time has come to rid Russia of her historical stains. While kings and queens may have proved useful around times of horse and cart todays era is different. Todays Russian wants safety and order and that they shall have, no matter the cost."
-  russia42tooltip:0 "Down with the old, up with the new! "
+  russia42tooltip:0 "Down with the old, up with the new!"
+  russia43tooltip:0 "______________________________________________Various §YEvents§! will fire throughout your playthrough in line with this political path."
   ##########################
   # FOCUS
   ##########################
@@ -421,7 +423,7 @@
   RUS_only_the_best:0 "Only The Best"
   RUS_only_the_loyal:0 "Only The Loyal"
   RUS_patriotic_marches:0 "Patriotic Marches"
-  RUS_the_russian_police_state:0 "The Russian Police State"
+  RUS_the_russian_police_state:0 "The Russian §gPolice State§!"
   RUS_the_churches_blessing:0 "The Churches Blessing"
   RUS_pure_as_could_be:0 "Pure As Could Be"
   RUS_mobolize_urban_reserves:0 "Mobolize Urban Reserves" 
@@ -435,7 +437,7 @@
   RUS_bright_minds:0 "Bright Minds"
   RUS_fan_russian_militarism:0 "Fan Russian Militarism"
   RUS_a_nation_on_restart:0 "A Nation On Restart"
-  RUS_a_second_renaissance:0 "A Second Renaissance"
+  RUS_a_second_renaissance:0 "A Second §YRenaissance§C"
   RUS_personal_ventures:0 "Personal Ventures"
   RUS_enforce_the_hierachy:0 "Enforce The Hierachy"
   RUS_a_rebirthed_empire:0 "A Rebirtherd Empire"
@@ -598,11 +600,40 @@
   RUS_the_university_of_moscow:0 "The University Of Moscow"
   RUS_realize_slavia:0 "A One Party State"
   RUS_a_permanent_state_of_paranoia:0 "A Permanent State Of Paranoia"
-
+  RUS_a_nation_in_chaos:0 "A Nation In §RChaos§!"
+  RUS_the_first_order_of_business:0 "The First Order Of Business"
+  RUS_quell_the_unrest:0 "Quell The Unrest"
+  RUS_cease_political_infighting:0 "Cease Political Infighting"
+  RUS_scare_off_the_reds:0 "Scare Off The Reds"
+  RUS_the_foundations_of_a_dystopia:0 "The Foundations Of A §gDystopia§!"
+  RUS_the_foundations_of_a_utopia:0 "The Foundations Of A §CUtopia§!"
+  RUS_kill_off_the_ambitious:0 "Kill Off The Ambitious"
+  RUS_the_romanov_leftovers:0 "The Romanov Leftovers"
+  RUS_untaped_potential:0 "Untapped Potential"
+  RUS_pytors_guiding_hand:0 "Pytor's Guiding Hand"
+  RUS_kolchaks_firm_presence:0 "Kolchak's Firm Presence"
+  RUS_the_cults_holy_servitude:0 "The Cult's Holy Servitude"
+  RUS_anastasys_love_for_order:0 "Anastasy's Love For Order"
+  RUS_connections_with_the_okhrana:0 "Connections With The Okhrana"
+  RUS_connections_with_the_admiralty:0 "Connections With The Admiralty"
+  RUS_expand_the_definition_of_russian:0 "Expand The Definition Of Russian"
+  RUS_there_is_no_murder_in_paradise:0 "There Is No Murder In Paradise" 
+  RUS_war_is_peace_freedom_is_slavery_ignorance_is_strength:0 "War Is Peace, Freedom Is Slavery, Ignorance Is Strength"
+  RUS_entice_the_slavic_diaspora:0 "Entice The Slavic Diaspora"
+  RUS_hunt_the_pragmatic:0 "Hunt The Pragmatic"
+  RUS_church_estates:0 "Church Estates"
+  RUS_the_final_crusade:0 "The Final Crusade"
+  RUS_heed_gods_words:0 "Heed God's Words"
+  RUS_connections_with_the_military:0 "Connections With The Military"
+  RUS_the_pure_state:0 "The §RPure§! State" 
+  RUS_the_divine_state:0 "The §CDivine§! State"
+  RUS_connections_with_the_orthodox_church:0 "Connections With The Orthodox Church"
+  RUS_a_government_of_shadows:0 "A Government Of Shadows"
+  RUS_messengers_of_god:0 "Messengers Of God"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
-  russia1tooltip:0 "\n§YUnlocks§! £decision_icon_small the §CParty Loyalty§! mechanic.\n\n"
+  russia1tooltip:0 "§YUnlocks§! £decision_icon_small the §CParty Loyalty§! mechanic.\n_____________________________________________"
   RUS_Party_Loyaly_DEC:0 "Your Party Loyalty will §RDecrease§!"   
   RUS_Party_Loyaly_INC:0 "Your Party Loyalty will §GIncrease§!"
   PB_RUS_Party_Loyalty:0 "Party Loyalty"
